syntax = "proto3";

package user;

message UserProfile {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string creationDate = 5;
  string role = 6; // Example of extended attribute
}

message Group {
  string groupId = 1;
  string name = 2;
  string description = 3;
  repeated string scopes = 4; // List of scopes
  repeated UserProfile members = 5; // Relationship with UserProfile
}

// Service definitions
service UserService {
  rpc CreateUser(UserProfile) returns (UserProfile);
  rpc UpdateUser(UserProfile) returns (UserProfile);
  rpc FetchUser(UserRequest) returns (UserProfile);
  rpc ListUsers(Empty) returns (UserList);
}

service GroupService {
  rpc CreateGroup(Group) returns (Group);
  rpc UpdateGroup(Group) returns (Group);
  rpc FetchGroup(GroupRequest) returns (Group);
  rpc ListGroups(Empty) returns (GroupList);
}

// Request/Response messages
message UserRequest {
  string userId = 1;
}

message GroupRequest {
  string groupId = 1;
}

message UserList {
  repeated UserProfile users = 1;
}

message GroupList {
  repeated Group groups = 1;
}

message Empty {}